// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisInfiniteHits]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-infinite-hits>
      
      
      <div
        class="ais-InfiniteHits"
      >
        
        
        
        
  
        
        
        
        
        <div>
          
          
          <ul
            class="ais-InfiniteHits-list"
          >
            
            
            
            <li
              class="ais-InfiniteHits-item"
            >
              
              
              <ng-ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  foo
                </span>
              </ng-ais-highlight>
              
            
            </li>
            <li
              class="ais-InfiniteHits-item"
            >
              
              
              <ng-ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  bar
                </span>
              </ng-ais-highlight>
              
            
            </li>
            <li
              class="ais-InfiniteHits-item"
            >
              
              
              <ng-ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  foobar
                </span>
              </ng-ais-highlight>
              
            
            </li>
            <li
              class="ais-InfiniteHits-item"
            >
              
              
              <ng-ais-highlight
                attribute="name"
                ng-reflect-attribute="name"
                ng-reflect-hit="[object Object]"
              >
                <span
                  class="ais-Highlight"
                >
                  barfoo
                </span>
              </ng-ais-highlight>
              
            
            </li>
            
          
          </ul>
          
        
        </div>
        
  
        
        
        <button
          class="ais-InfiniteHits-showMore"
        >
          
          Show more results
        
        </button>
        
      
      </div>
      
    
    </ng-ais-infinite-hits>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`InfiniteHits renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisInfiniteHits]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-infinite-hits>
      
      
      <div
        class="ais-InfiniteHits"
      >
        
        
        
        
  
        
        
        
        
        <div>
          
          
          <ul
            class="ais-InfiniteHits-list"
          >
            
            
            
            
          
          </ul>
          
        
        </div>
        
  
        
        
        <button
          class="ais-InfiniteHits-showMore"
        >
          
          Show more results
        
        </button>
        
      
      </div>
      
    
    </ng-ais-infinite-hits>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
